--- a/package.json
+++ b/package.json
@@ -3,7 +3,7 @@
   "description": "Starter template for building an Alteryx HTML/JavaScript tool using Vue.js and Vuetify",
   "version": "1.0.1",
   "author": "Taylor Cox",
-  "private": true,
+  "private": false,
   "scripts": {
     "dev": "cross-env NODE_ENV=development webpack-dev-server --open --inline --hot",
     "build": "cross-env NODE_ENV=production webpack --progress --hide-modules"
